# fastfood-hexagonal

./: README.md  pyproject.toml
src/: main.py
src/modules/authentication/adapters/dtos/: __init__.py  auth_token_data.py  request_anonymous_login.py  request_login.py
src/modules/authentication/application/dtos/: auth_token_data.py
src/modules/authentication/application/use_cases/: authenticate.py
src/modules/authentication/domain/entities/: authentication.py
src/modules/authentication/domain/services/: __init__.py  do_anonymous_authentication.py  do_authentication.py
src/modules/categories/application/use_cases/: get_category_by_id_use_case.py
src/modules/categories/domain/entities/: category_entity.py
src/modules/categories/domain/repositories/: categories_repository.py
src/modules/categories/domain/services/: get_category_by_id_service.py
src/modules/infra/dependency_injector/containers/: core_container.py
src/modules/order/adapters/dtos/: request_completion.py
src/modules/order/application/dtos/: request_order.py
src/modules/order/application/use_cases/: complete_order.py  create_new_order.py
src/modules/products/exceptions/: product_already_exists_exception.py  product_invalid.py
src/modules/shared/decorators/: __init__.py
src/modules/shared/exceptions/: application_exception.py  domain_exception.py  handlers.py
src/modules/shared/interfaces/: __init__.py  application_service.py  domain_service.py
src/modules/user/exceptions/: user_already_exists_exception.py  user_invalid_data_exception.py
(+44 files in other folders)
